--- a/MyImdb/Views/Movie/Index.cshtml
+++ b/MyImdb/Views/Movie/Index.cshtml
@@ -6,6 +6,13 @@
 }
 
 <div>
+	@if (ViewBag.Message != null)
+	{
+		<div class="alert alert-info">
+			<p>@ViewBag.Message</p>
+		</div>
+	}
+
 	<b> Movies List:</b>
 	<br/>
 	<table>
