style: improve style of pages

--- a/MyImdb/Views/Movie/Create.cshtml
+++ b/MyImdb/Views/Movie/Create.cshtml
@@ -1,12 +1,12 @@
-﻿@model MyImdb.ViewModels.CreateMovieViewModel
+﻿@model CreateMovieViewModel
 
 @{
 	ViewBag.Title = "Create";
 	Layout = "_Layout";
 }
 
-<h1>Create</h1>
-<h4>MovieCreateViewModel</h4>
+<h1>Add movie</h1>
+<h4>Please improve the movie data to add a new movie</h4>
 <hr/>
 <div class="row">
 	<div class="col-md-4">
