--- a/MyImdb/Views/Home/Index.cshtml
+++ b/MyImdb/Views/Home/Index.cshtml
@@ -2,7 +2,72 @@
 	ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-	<h1 class="display-4">Welcome</h1>
-	<p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<style>
+	.months-movie > *:not(:last-child) {
+		margin-right: 30px; 
+	} 	
+
+	.movie {
+		width: 20rem;
+		height: 22rem;
+		background: #ccc;
+	}
+	
+	.movie i {
+		font-size: 3rem;
+	}
+	
+	.movie > .title {
+		background: #333;
+	}
+</style>
+
+<div class="w-100 h-100 p-3">
+	<div style="margin-right: auto">
+		<h4>Movies of the month</h4>
+
+		<ul class="months-movie d-flex flex-wrap list-unstyled">
+			<li class="movie d-flex flex-column">
+				<div class="d-flex flex-grow-1">
+					<i class="fas fa-video m-auto"></i>
+				</div>
+
+				<div class="title d-flex p-2">
+					<h7 class="text-center text-light m-auto">
+						Batman: Dark Knight Rises
+					</h7>
+				</div>
+			</li>
+
+			<li class="movie d-flex flex-column">
+				<div class="d-flex flex-grow-1">
+					<i class="fas fa-video m-auto"></i>
+				</div>
+
+				<div class="title d-flex p-2">
+					<h7 class="text-center text-light m-auto">
+						Source Code
+					</h7>
+				</div>
+			</li>
+
+			<li class="movie d-flex flex-column">
+				<div class="d-flex flex-grow-1">
+					<i class="fas fa-video m-auto"></i>
+				</div>
+
+				<div class="title d-flex p-2">
+					<h7 class="text-light m-auto">
+						Nocturnal Animals
+					</h7>
+				</div>
+			</li>
+		</ul>
+	</div>
+
+	<div>
+		<a asp-controller="Movie" asp-action="Index">
+			See the complete list
+		</a>
+	</div>
 </div>
