--- a/MyImdb/wwwroot/css/site.css
+++ b/MyImdb/wwwroot/css/site.css
@@ -10,9 +10,28 @@ html {
 
 html {
 	position: relative;
-	min-height: 100%;
+	height: 100%;
 }
 
 body {
 	margin-bottom: 60px;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+}
+
+#myimdb-container {
+	flex: 1;
+	max-width: 95rem;
+}
+
+#myimdb-container > main {
+	width: 100%;
+	height: 100%;
+}
+
+@media (max-width: 95rem) {
+	#myimdb-container {
+		width: 100%;
+	}
 }
