--- a/MyImdb/Views/Home/Index.cshtml
+++ b/MyImdb/Views/Home/Index.cshtml
@@ -105,33 +105,53 @@
 	<nav class="p-3">
 		<div>
 			<h4>Opening this week</h4>
-			
+
 			<ul>
-				<li><a href="#">Beauty and the Beast</a></li>
-				<li><a href="#">T2 Trainspotting</a></li>
-				<li><a href="#">Song to song</a></li>
-				<li><a href="#">The Beiko Experiment</a></li>
-				<li><a href="#">Frants</a></li>
+				<li>
+					<a href="#">Beauty and the Beast</a>
+				</li>
+				<li>
+					<a href="#">T2 Trainspotting</a>
+				</li>
+				<li>
+					<a href="#">Song to song</a>
+				</li>
+				<li>
+					<a href="#">The Beiko Experiment</a>
+				</li>
+				<li>
+					<a href="#">Frants</a>
+				</li>
 			</ul>
-			
+
 			<a href="#">See more opening this week</a>
 		</div>
-		
+
 		<div>
 			<h4>Coming soon</h4>
-			
+
 			<ul>
-				<li><a href="#">Power Ranges</a></li>
-				<li><a href="#">Life</a></li>
-				<li><a href="#">CHPS</a></li>
-				<li><a href="#">Wilson</a></li>
-				<li><a href="#">Prevenge</a></li>
+				<li>
+					<a href="#">Power Ranges</a>
+				</li>
+				<li>
+					<a href="#">Life</a>
+				</li>
+				<li>
+					<a href="#">CHPS</a>
+				</li>
+				<li>
+					<a href="#">Wilson</a>
+				</li>
+				<li>
+					<a href="#">Prevenge</a>
+				</li>
 			</ul>
-			
+
 			<a href="#">See coming soon</a>
 		</div>
 	</nav>
-	
+
 	<footer class="p-3">
 		<a asp-controller="Movie" asp-action="Index">
 			See the complete list
