--- a/MyImdb/Views/Movie/Show.cshtml
+++ b/MyImdb/Views/Movie/Show.cshtml
@@ -9,10 +9,10 @@
 	<h2>@Model.Title</h2>
 
 	<div class="d-flex" style="gap: 13px">
-		<div class="banner d-flex" style="width:400px; height:400px; background: #ccc;">
+		<div class="banner d-flex" style="background: #ccc; height: 400px; width: 400px;">
 			<i class="fas fa-video m-auto" style="font-size: 3rem"></i>
 		</div>
-		<div class="info d-flex flex-column" style="gap: 8px; border-radius: 13px">
+		<div class="info d-flex flex-column" style="border-radius: 13px; gap: 8px;">
 			<h3>@Model.Title</h3>
 			<h5>
 				<b>Rank: </b> @Model.Rank
