--- a/MyImdb/Views/Shared/_Layout.cshtml
+++ b/MyImdb/Views/Shared/_Layout.cshtml
@@ -9,9 +9,7 @@
 	<link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
 
 	<style>
-		body {
-			background: #f3f3f3;
-		}
+		body { background: #f3f3f3; }
 	</style>
 </head>
 <body>
@@ -33,7 +31,7 @@
 						       id="query"
 						       class="form-control"
 						       placeholder="Search..."
-						       style="width: 20rem; border-top-right-radius: 0; border-bottom-right-radius: 0"/>
+						       style="border-bottom-right-radius: 0; border-top-right-radius: 0; width: 20rem;"/>
 						<label class="form-label d-none" for="query">Search</label>
 					</div>
 
